--- a/Web.config
+++ b/Web.config
@@ -159,7 +159,7 @@
   <system.net>
     <mailSettings>
       <smtp from="soportetecnico202011@outlook.com">
-        <network enableSsl="true" host="smtp-mail.outlook.com" port="25" userName="Soporte Tecnico" password="soportetecnico2020" defaultCredentials="true" />
+        <network enableSsl="true" host="smtp.office365.com" port="25" userName="Soporte Tecnico" password="soportetecnico2020" defaultCredentials="true" />
       </smtp>
     </mailSettings>
   </system.net>
