--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AjaxControlToolkit" version="18.1.0" targetFramework="net45" />
+  <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net40" />
+  <package id="FastMember.Signed" version="1.3.0" targetFramework="net40" />
+  <package id="System.Linq.Dynamic.Core" version="1.0.8.7" targetFramework="net40" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net40" />
 </packages>
